# mle_forecasting

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile-mlflow  Dockerfile.train  README.md  azure-pipelines.yml  docker-compose.yml  pyproject.toml  requirements.txt
docker/api/: Dockerfile.api  requirements.txt
docker/drift_detection/: Dockerfile.drift  requirements.txt
docker/mlflow/: Dockerfile.mlflow
docker/train/: Dockerfile.train  requirements.txt
docker/train_flow/: Dockerfile.train_flow  requirements.txt
notebooks/: Drift Detection with Evidently.ipynb  Forecasting model.ipynb  README.md
src/: api.py  drift_detection.py  predict.py  prefect_workflow.py  preprocess.py  settings.py  train.py  train_flow.py  wait_for_mlflow.py
src/utils/: schemas.py
tests/: test_predict.py  test_preprocess.py
